Fixed NF config not autosaving